--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="body">
-    <div class="moon-wrapper">
+    <div class="icon-wrapper">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
@@ -22,7 +22,9 @@
           d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z"
         />
       </svg>
+      <img class="sound" src="mute.png" alt="loading" />
     </div>
+
     <div class="container">
       <div class="display">
         <div class="hrs num">00</div>
